--- a/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
+++ b/RosePerksTest/RosePerksTest/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1r7-8q-G8I">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="1r7-8q-G8I">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller - Rose Perks-->
@@ -244,20 +244,25 @@ alumniaffairs@rose-hulman.edu
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LYG-9s-gw4">
-                                <rect key="frame" x="52" y="207" width="217" height="30"/>
+                                <rect key="frame" x="12" y="239" width="295" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.10915055915736749" green="0.73581157249929741" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Category">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="8km-yA-4Hi" kind="push" id="WvL-qz-ao6"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aw-2H-IgE">
-                                <rect key="frame" x="52" y="245" width="217" height="30"/>
+                                <rect key="frame" x="12" y="284" width="295" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.19255821263462158" green="1" blue="0.0083304829991732721" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <state key="normal" title="Perks List">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="PerksListButton:" destination="WsS-nN-ASa" eventType="touchUpInside" id="AR4-l0-2zt"/>
@@ -265,20 +270,24 @@ alumniaffairs@rose-hulman.edu
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T2l-m4-fQc">
-                                <rect key="frame" x="52" y="283" width="217" height="30"/>
+                                <rect key="frame" x="12" y="331" width="295" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.10924762228260865" green="0.098024235123936113" blue="0.10501456605378365" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Alumni Affairs Contact">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <segue destination="SRz-Lk-bOA" kind="push" id="m7a-9g-Thb"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zvI-zu-MQX">
-                                <rect key="frame" x="52" y="321" width="217" height="30"/>
+                                <rect key="frame" x="12" y="376" width="295" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.72934358016304346" green="0.076819793238101772" blue="0.0027192000296020007" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Google Map">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="GoogleMapButton:" destination="WsS-nN-ASa" eventType="touchUpInside" id="Exw-b5-Nc7"/>
@@ -289,7 +298,7 @@ alumniaffairs@rose-hulman.edu
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="RH Perks" id="1JA-Ju-iNB"/>
                     <connections>
@@ -313,7 +322,7 @@ alumniaffairs@rose-hulman.edu
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4yf-rA-IYh">
-                                <rect key="frame" x="100" y="188" width="121" height="123"/>
+                                <rect key="frame" x="20" y="83" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="129091-simple-red-square-icon-food-beverage-knife-fork2.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -324,7 +333,7 @@ alumniaffairs@rose-hulman.edu
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" restorationIdentifier="Hotel" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YRE-nb-7ln">
-                                <rect key="frame" x="20" y="69" width="121" height="123"/>
+                                <rect key="frame" x="179" y="83" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" backgroundImage="129300-simple-red-square-icon-people-things-bed1-sc43.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -335,9 +344,9 @@ alumniaffairs@rose-hulman.edu
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zpr-tR-QRG">
-                                <rect key="frame" x="179" y="69" width="121" height="123"/>
+                                <rect key="frame" x="100" y="194" width="121" height="123"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" backgroundImage="128579-simple-red-square-icon-business-dollar-solid.png">
+                                <state key="normal" backgroundImage="129999-simple-red-square-icon-transport-travel-transportation-car9-sc44.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -368,7 +377,7 @@ alumniaffairs@rose-hulman.edu
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Category" id="scd-UC-G1j"/>
                 </viewController>
@@ -397,9 +406,9 @@ alumniaffairs@rose-hulman.edu
     </scenes>
     <resources>
         <image name="128520-simple-red-square-icon-business-cart-7dots.png" width="256" height="256"/>
-        <image name="128579-simple-red-square-icon-business-dollar-solid.png" width="256" height="256"/>
         <image name="129091-simple-red-square-icon-food-beverage-knife-fork2.png" width="256" height="256"/>
         <image name="129300-simple-red-square-icon-people-things-bed1-sc43.png" width="256" height="256"/>
+        <image name="129999-simple-red-square-icon-transport-travel-transportation-car9-sc44.png" width="512" height="512"/>
         <image name="RH-AA.jpg" width="1219" height="355"/>
         <image name="background_not_complete.jpg" width="591" height="624"/>
         <image name="category_129921_simple_red_square_icon_symbols_shapes_spinner1 (1).png" width="512" height="512"/>
@@ -412,6 +421,6 @@ alumniaffairs@rose-hulman.edu
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="mJa-0N-28G"/>
+        <segue reference="bfg-mI-A0p"/>
     </inferredMetricsTieBreakers>
 </document>
